Added Header for NavDrawer

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
 
     <!-- The navigation drawer -->
     <android.support.design.widget.NavigationView
+        app:headerLayout="@layout/nav_header"
         android:id="@+id/nvView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
