--- a/app/src/main/res/layout/fragment_semester_two.xml
+++ b/app/src/main/res/layout/fragment_semester_two.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.ayqphsorbital.nussem.SemesterOne">
+    android:layout_height="match_parent" tools:context="com.ayqphsorbital.nussem.SemesterTwo">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Sem 1 Blank Frag"
+        android:text="Sem 2 Blank Frag"
         android:textSize="100sp"/>
 
 </FrameLayout>
