Added past search query suggestions
Now to add a "autocomplete" function that includes the names and mod
number from NUSMods API JSON list

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,7 +13,7 @@
 
     <!-- Search Widget -->
     <item
-        app:actionViewClass="android.widget.SearchView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
         android:id="@+id/action_search"
         android:orderInCategory="200"
         android:title="Search"
