--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -3,15 +3,20 @@
     android:layout_height="match_parent" tools:context="com.ayqphsorbital.nussem.OneSemOne">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="MAIN PAGE Blank Frag"
-        android:textSize="100sp"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UpdateDatabase"
-        android:id="@+id/updateDB"
-        android:layout_gravity="left|center_vertical" />
+        android:text="Add new semester"
+        android:id="@+id/addsem"
+        android:layout_gravity="right"
+
+        />
+
+    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+        android:text="MAIN PAGE Blank Frag"
+        android:textSize="100sp"/>
+
+
 
 </FrameLayout>
