--- a/app/src/main/res/layout/fragment_one_sem_one.xml
+++ b/app/src/main/res/layout/fragment_one_sem_one.xml
@@ -3,8 +3,21 @@
     android:layout_height="match_parent" tools:context="com.ayqphsorbital.nussem.OneSemOne">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Sem 1 Blank Frag"
-        android:textSize="100sp"/>
+
+    <Button
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:text="Add module"
+        android:id="@+id/addmodule1"
+        android:layout_gravity="right"
+
+        />
+
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@android:id/list"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
+        android:textSize ="40sp" />
+
 
 </FrameLayout>
