--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -15,20 +15,13 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="385dp"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="Add module"
+        android:id="@+id/search_addmodule"
         android:layout_gravity="bottom" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button2"
-        android:layout_gravity="center_vertical" />
-
-    <TextView
+        <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list"
