--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:layout_width="385dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Add module"
         android:id="@+id/search_addmodule"
