--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -23,43 +23,18 @@
             </menu>
         </item>
 
-        <item android:title="@string/Year_Two">
-            <menu>
-                <item
-                    android:icon="@drawable/ic_one"
-                    android:title="@string/Sem_One"
-                    android:id="@+id/two_sem_one" />
-                <item
-                    android:icon="@drawable/ic_two"
-                    android:title="@string/Sem_Two"
-                    android:id="@+id/two_sem_two"/>
-            </menu>
-        </item>
+        <ListView
+            android:id="@+id/left_drawer"
+            android:layout_width="240dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="0dp"
+            android:background="#111"
 
-        <item android:title="@string/Year_Three">
-            <menu>
-                <item
-                    android:icon="@drawable/ic_one"
-                    android:title="@string/Sem_One"
-                    android:id="@+id/three_sem_one" />
-                <item
-                    android:icon="@drawable/ic_two"
-                    android:title="@string/Sem_Two"
-                    android:id="@+id/three_sem_two" />
-            </menu>
-        </item>
 
-        <item android:title="@string/Year_Four">
-            <menu>
-                <item
-                    android:icon="@drawable/ic_one"
-                    android:title="@string/Sem_One"
-                    android:id="@+id/four__sem_one" />
-                <item
-                    android:icon="@drawable/ic_two"
-                    android:title="@string/Sem_Two"
-                    android:id="@+id/four_sem_two" />
-            </menu>
-        </item>
+            />
+
     </group>
 </menu>
