--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/boarder"
     android:weightSum="1">
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:id="@+id/adapter_crossbutton"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
@@ -25,7 +27,10 @@
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/adapter_crossbutton"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:textStyle="italic"
+            android:textSize="15sp"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -34,6 +39,8 @@
             android:id="@+id/adapter_ModuleCode"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:textStyle="bold"
+            android:textSize="20sp"
             android:layout_alignBottom="@+id/adapter_crossbutton" />
 
         <TextView
@@ -46,5 +53,6 @@
             android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
+
 
 </LinearLayout>
