--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,13 +2,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/main_page"
-            android:title="Main Page?" />
-        <item
-            android:id="@+id/nav_second_fragment"
-            android:title="Placehold" />
-        <item
-            android:id="@+id/nav_third_fragment"
-            android:title="Placehold" />
+            android:title="Overview" />
 
         <item android:title="@string/Year_One">
             <menu>
