Revert "Aesthetics Changes"
This reverts commit 72d1e4fe94a9305f732ceaab9f5455916360b857.

--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -2,7 +2,13 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/main_page"
-            android:title="Overview" />
+            android:title="Main Page?" />
+        <item
+            android:id="@+id/nav_second_fragment"
+            android:title="Placehold" />
+        <item
+            android:id="@+id/nav_third_fragment"
+            android:title="Placehold" />
 
         <item android:title="@string/Year_One">
             <menu>
