--- a/app/src/main/res/layout/semadapter.xml
+++ b/app/src/main/res/layout/semadapter.xml
@@ -24,6 +24,8 @@
         android:id="@+id/listviewtemp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:textSize ="200sp"
         />
 
