All mods are shown in overview
This is done by changing the Listview originally in the semester adapter
into a linear layout, then each individual child view is added to the
Linearlayout dynamically.

Do note that every time the layout refreshes, you must do a
Linearlayout.removeAllViews();

Bugs: When you click the semester, it exits the app

--- a/app/src/main/res/layout/semadapter.xml
+++ b/app/src/main/res/layout/semadapter.xml
@@ -19,6 +19,21 @@
         android:gravity="center"
         android:textStyle="bold"
         />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:id="@+id/semadapter_linear"
+
+
+        >
+
+
+    </LinearLayout>
+
 
     <ListView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/listviewtemp"
