--- a/app/src/main/res/layout/adapter.xml
+++ b/app/src/main/res/layout/adapter.xml
@@ -31,6 +31,8 @@
             android:layout_alignParentStart="true"
             android:textStyle="italic"
             android:textSize="15sp"
+            android:paddingLeft="15sp"
+            android:paddingTop="8sp"
             />
 
         <TextView
@@ -41,7 +43,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="30sp"
+            android:paddingLeft="15sp"
             android:layout_alignBottom="@+id/adapter_crossbutton" />
 
         <TextView
