--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -8,11 +8,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+
     <!-- The ActionBar -->
     <include
         layout="@layout/toolbar_custom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+
+        />
 
     <Button
         android:layout_width="fill_parent"
