No more double jump and  loading screen
No more double jump
1) Module information is sent from the search activity to the main
activity
2) the main activity now is the one that adds the module

loading screen
1) the default name of the module is loading...

--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ModCode"
-        android:text="MODCODE"
+        android:text="Loading..."
         android:textSize="50sp"
         android:paddingLeft="10sp"
         android:paddingBottom="0sp"
@@ -43,7 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ModTitle"
-        android:text="MODTITLE"
         android:textSize="28sp"
         android:paddingLeft="10sp"
         android:paddingBottom="3sp"
@@ -56,7 +55,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/list"
-            android:text="Mod Text"
         android:padding="10sp"
             android:background="#e1e1e1">
 
