Modular credit works
As its name suggests..

No big changes were made.

--- a/app/src/main/res/layout/semadapter.xml
+++ b/app/src/main/res/layout/semadapter.xml
@@ -18,6 +18,7 @@
         android:textSize ="30sp"
         android:gravity="center"
         android:textStyle="bold"
+        android:longClickable="true"
         />
     <LinearLayout
         android:orientation="vertical"
