--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -42,6 +42,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:id="@+id/ModTitle"
         android:textSize="28sp"
         android:paddingLeft="10sp"
