--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,24 +21,29 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <!-- The navigation drawer -->
-
-
-            />
 
     </LinearLayout>
 
+    <!-- The navigation drawer -->
+    <android.support.design.widget.NavigationView
+        app:headerLayout="@layout/nav_header"
+        android:id="@+id/nvView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:menu="@menu/drawer_view"/>
 
-
-    <ListView android:id="@+id/left_drawer"
+    <ListView
+        android:id="@+id/left_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#ffeeeeee"/>
+        android:background="#111"
 
 
-
+        />
 </android.support.v4.widget.DrawerLayout>
