--- a/app/src/main/res/layout/semesterview.xml
+++ b/app/src/main/res/layout/semesterview.xml
@@ -23,7 +23,9 @@
         android:id="@+id/semview_moduleheader"
         android:gravity="start"
         android:textSize="30dp"
-        android:padding="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="30dp"
         android:textStyle="italic"
         />
 
@@ -45,23 +47,26 @@
         android:id="@+id/semview_summary"
         android:gravity="start"
         android:textSize="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:textStyle="italic"
-        android:padding="20dp"/>
+        />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="GPA"
         android:id="@+id/semview_GPA"
-        android:layout_marginLeft="30dp"
-        android:textSize="15dp"/>
+        android:layout_marginLeft="40dp"
+        android:textSize="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Total MC taken"
         android:id="@+id/semview_mctotal"
-        android:layout_marginLeft="30dp"
-        android:textSize="15dp"
+        android:layout_marginLeft="40dp"
+        android:textSize="20dp"
         />
 </LinearLayout>
