--- a/app/src/main/res/layout/modwithgradeadapter.xml
+++ b/app/src/main/res/layout/modwithgradeadapter.xml
@@ -27,14 +27,14 @@
             android:text="Module Name"
             android:id="@+id/adapter_ModuleName"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/spinner1"
+            android:layout_alignTop="@+id/spinner1"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:textStyle="italic"
             android:textSize="15sp"
             android:paddingLeft="15sp"
             android:paddingTop="8sp"
-            />
+             />
 
         <TextView
             android:layout_width="wrap_content"
@@ -46,7 +46,7 @@
             android:textStyle="bold"
             android:textSize="30sp"
             android:paddingLeft="15sp"
-            android:layout_alignBottom="@+id/spinner1" />
+            android:layout_below="@+id/adapter_ModuleName" />
 
         <TextView
             android:layout_width="wrap_content"
