--- a/app/src/main/res/layout/semesterview.xml
+++ b/app/src/main/res/layout/semesterview.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,8 +28,8 @@
         android:gravity="start"
         android:textSize="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp"
         android:textStyle="italic"
         />
 
@@ -48,7 +52,7 @@
         android:gravity="start"
         android:textSize="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
         android:textStyle="italic"
         />
@@ -62,11 +66,21 @@
         android:textSize="20dp"/>
 
     <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Total MC taken"
+    android:id="@+id/semview_mctotal"
+    android:layout_marginLeft="40dp"
+    android:textSize="20dp"/>
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Total MC taken"
-        android:id="@+id/semview_mctotal"
+        android:text="Total graded MC taken"
+        android:id="@+id/semview_gradedmc"
         android:layout_marginLeft="40dp"
         android:textSize="20dp"
         />
 </LinearLayout>
+
+</ScrollView>
